[package]
name = "lutz"
version = "1.4.0"
edition = "2021"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
license = "MIT"
description = "Rust implementation of \"An Algorithm for the Real Time Analysis of Digitised Images\" by R. K. Lutz"
readme = "README.md"
repository = "https://github.com/RReverser/lutz"
keywords = ["image", "vision", "labeling"]
categories = ["algorithms", "computer-vision", "science"]
exclude = ["examples"]

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
genawaiter = { version = "0.99.1", default-features = false }
auto_impl = "1.1.0"

[dev-dependencies]
image = "0.24.7"
imageproc = "0.23.0"
iai = "0.1"

[[bench]]
name = "bench"
harness = false

[features]
nightly = []
