[package]
name = "lutz"
version = "1.4.1"
edition = "2021"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
license = "MIT"
description = "Rust implementation of \"An Algorithm for the Real Time Analysis of Digitised Images\" by R. K. Lutz"
readme = "README.md"
repository = "https://github.com/RReverser/lutz"
keywords = ["image", "vision", "labeling"]
categories = ["algorithms", "computer-vision", "science"]
exclude = ["examples"]

[dependencies]
genawaiter = { version = "0.99.1", default-features = false }
auto_impl = "1.2.0"

[dev-dependencies]
image = "0.25.5"
imageproc = "0.25.0"
iai = "0.1"

[[bench]]
name = "bench"
harness = false
